re-organised some stuff

--- a/web/common/templates/base.html
+++ b/web/common/templates/base.html
@@ -26,7 +26,8 @@
                             <c-lbi n="rmx.home" w="1em" h="1em" />
                             Home
                         </c-lb.menu.item>
-                        {% comment %} <c-lb.menu.item href="/about" title="About">
+                        {% comment %}
+                        <c-lb.menu.item href="/about" title="About">
                             <c-lbi n="rmx.info-i" w="1em" h="1em" />
                             About
                         </c-lb.menu.item>
@@ -37,7 +38,8 @@
                         <c-lb.menu.item href="/contact" title="Contact">
                             <c-lbi n="rmx.mail" w="1em" h="1em" />
                             Contact
-                        </c-lb.menu.item> {% endcomment %}
+                        </c-lb.menu.item>
+                        {% endcomment %}
                     </c-lb.menu>
                 </c-lb.navbar.center>
                 <c-lb.navbar.end>
